<resources>
    <string name="author" translatable="false">Jonathan Dure(Dure0018)</string>
    <string name="app_name">HiLo</string>
    <string name="app_Title">Hilo Guessing Game</string>
    <string name="guess_text">Enter Your Guess</string>
    <string name="guess_btn">Guess</string>
    <string name="reset_button">Reset</string>
    <string name="intro_text">Guess from 1 to 1000</string>
    <string name="hilo_logo">App Logo</string>
    <string name="action_about">About</string>
    <string name="correct">Congratulation You Guessed Correctly</string>
    <string name="tooLow">Your Guess Was Too Low</string>
    <string name="tooHigh">Your Guess Was Too High</string>
    <string name="superior">Superior win!</string>
    <string name="excellent">Excellent win!</string>
    <string name="reset">Please Reset!</string>
    <string name="error_invalid">Invalid Number</string>
    <string name="invalid_input">Please input a number between 1 and 1000</string>
</resources>

