<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.algonquincollege.dure0018.hilo.MainActivity">
    <!--Todo use a new app Logo-->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="112dp"
        android:layout_height="119dp"
        android:src="@drawable/thinking_face"
        android:contentDescription="@string/hilo_logo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/guess_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/guess_text"
        android:labelFor="@+id/intro_text"
        android:textColor="@color/textDark"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/guess_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_btn"
        android:textColor="@color/textLight"
        android:background="@color/colorGuess"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/guess_num"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="235dp"
        app:layout_constraintVertical_bias="0.077"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.303" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:textColor="@color/textLight"
        android:background="@color/colorReset"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/guess_num"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="236dp"
        app:layout_constraintVertical_bias="0.077"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.703" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/intro_text"
        android:textColor="@color/textDark"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        android:layout_marginBottom="360dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.466"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
